更新接口文档，添加订单状态、订单号和用户ID等可选参数；修改订单和用户查询接口，支持根据状态、用户名和手机号进行筛选；新增相应的服务和数据访问层方法以支持这些功能。

--- a/接口文档.md
+++ b/接口文档.md
@@ -979,6 +979,7 @@
 - 参数:
   - `pageNum`: 页码 (默认1)
   - `pageSize`: 每页数量 (默认10)
+  - `status`: 订单状态 (可选): 0-待付款 1-已付款 2-已发货 3-已完成 4-已取消
 - 响应:
 
 ```json
@@ -1110,6 +1111,9 @@
 - 参数:
   - `pageNum`: 页码 (默认1)
   - `pageSize`: 每页数量 (默认10)
+  - `status`: 订单状态 (可选): 0-待付款 1-已付款 2-已发货 3-已完成 4-已取消
+  - `orderNo`: 订单号关键词 (可选)
+  - `userId`: 用户ID (可选)
 - 响应: 与普通订单列表响应格式相同
 
 #### 7.1.2 获取订单详情 (管理员)
@@ -1222,6 +1226,8 @@
 - 参数:
   - `pageNum`: 页码 (默认1)
   - `pageSize`: 每页数量 (默认10)
+  - `username`: 用户名关键词 (可选)
+  - `phone`: 手机号关键词 (可选)
 - 响应:
 
 ```json
