新增支付宝沙箱支付（支付）和邮箱验证码登录

--- a/接口文档.md
+++ b/接口文档.md
@@ -1060,16 +1060,20 @@
 - 参数:
   - `id`: 订单ID (路径参数)
   - `paymentType`: 支付方式 (1支付宝，2微信，3银行卡)
+- 说明: 
+  - 当选择支付宝支付（paymentType=1）时，将跳转到支付宝支付页面
+  - 当选择其他支付方式时，直接返回支付结果
 - 响应:
-
-```json
-{
-  "success": true,
-  "code": 200,
-  "message": "成功",
-  "data": true
-}
-```
+  - 支付宝支付：直接返回HTML表单，自动跳转到支付宝支付页面
+  - 其他支付方式：
+  ```json
+  {
+    "success": true,
+    "code": 200,
+    "message": "成功",
+    "data": true
+  }
+  ```
 
 ### 6.7 确认收货
 
@@ -2563,6 +2567,105 @@
   "code": 200,
   "message": "成功",
   "data": true
+}
+```
+
+## 十四、支付宝支付接口
+
+### 14.1 支付宝异步通知
+
+- URL: `/api/alipay/notify`
+- 方法: `POST`
+- 需要验证: 否
+- 说明: 
+  - 此接口由支付宝服务器调用，用于通知支付结果
+  - 不需要前端调用
+- 响应:
+  - 处理成功返回字符串 "success"
+  - 处理失败返回字符串 "fail"
+
+### 14.2 支付宝同步回调
+
+- URL: `/api/alipay/return`
+- 方法: `GET`
+- 需要验证: 否
+- 说明: 
+  - 用户在支付宝完成支付后，会跳转到此页面
+  - 接口会重定向到订单详情页面
+- 响应: 
+  - 无直接响应，会重定向到订单详情页面
+
+### 14.3 查询支付状态
+
+- URL: `/api/alipay/query`
+- 方法: `GET`
+- 需要验证: 是
+- 参数:
+  - `orderNo`: 订单编号
+- 说明: 
+  - 用于查询订单在支付宝的支付状态
+- 响应:
+  ```json
+  {
+    "success": true,
+    "code": 200,
+    "message": "成功",
+    "data": true  // true表示已支付，false表示未支付
+  }
+  ```
+
+## 十五、邮箱登录接口
+
+### 15.1 发送邮箱验证码
+
+- URL: `/api/email/code/send`
+- 方法: `POST`
+- 需要验证: 否
+- 请求体:
+
+```json
+{
+  "email": "user@example.com"
+}
+```
+
+- 响应:
+
+```json
+{
+  "success": true,
+  "code": 200,
+  "message": "成功",
+  "data": true
+}
+```
+
+### 15.2 邮箱验证码登录
+
+- URL: `/api/email/login`
+- 方法: `POST`
+- 需要验证: 否
+- 请求体:
+
+```json
+{
+  "email": "user@example.com",
+  "code": "123456"
+}
+```
+
+- 响应:
+
+```json
+{
+  "success": true,
+  "code": 200,
+  "message": "成功",
+  "data": {
+    "userId": 1,
+    "username": "用户名",
+    "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
+  }
 }
 ```
 
